--- a/client/src/index.css
+++ b/client/src/index.css
@@ -2,6 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+/* body {
+  @apply font-sans;
+} */
+
 @layer utilities {
   /* Hide scrollbar for Chrome, Safari and Opera */
   .no-scrollbar::-webkit-scrollbar {
@@ -12,4 +16,8 @@
     -ms-overflow-style: none; /* IE and Edge */
     scrollbar-width: 0; /* Firefox */
   }
+}
+
+body{
+  font-family: 'Poppins';
 }
