--- a/client/src/index.css
+++ b/client/src/index.css
@@ -2,22 +2,36 @@
 @tailwind components;
 @tailwind utilities;
 
-/* body {
-  @apply font-sans;
-} */
-
 @layer utilities {
-  /* Hide scrollbar for Chrome, Safari and Opera */
   .no-scrollbar::-webkit-scrollbar {
     display: none;
   }
-  /* Hide scrollbar for IE, Edge and Firefox */
   .no-scrollbar {
-    -ms-overflow-style: none; /* IE and Edge */
-    scrollbar-width: 0; /* Firefox */
+    -ms-overflow-style: none;
+    scrollbar-width: 0; 
+  }
+  .scrollbar::-webkit-scrollbar {
+    display: block !important;
+    width: 8px;
+    height: 10px;
+  }
+
+  .scrollbar::-webkit-scrollbar-track {
+    border-radius: 100vh;
+    /* background: #f7f4ed; */
+  }
+
+  .scrollbar::-webkit-scrollbar-thumb {
+    background: #e0cbcb;
+    border-radius: 100vh;
+    /* border: 3px solid #f6f7ed; */
+  }
+
+  .scrollbar::-webkit-scrollbar-thumb:hover {
+    background: #c0a0b9;
   }
 }
 
-body{
-  font-family: 'Poppins';
+body {
+  font-family: "Poppins";
 }
