--- a/client/src/index.css
+++ b/client/src/index.css
@@ -18,17 +18,17 @@
 
   .scrollbar::-webkit-scrollbar-track {
     border-radius: 100vh;
-    /* background: #f7f4ed; */
+    background: #f7f4ed;
   }
 
   .scrollbar::-webkit-scrollbar-thumb {
-    background: #e0cbcb;
+    background: #a39696;
     border-radius: 100vh;
     /* border: 3px solid #f6f7ed; */
   }
 
   .scrollbar::-webkit-scrollbar-thumb:hover {
-    background: #c0a0b9;
+    background: #8d7287;
   }
 }
 
